test/libsolidity/syntaxTests/functionCalls/calldata_struct_argument_with_internal_data_type_inside.sol
contract C {
	struct S {
		function() a;
	}
	function f(S calldata) public {}
}
// ----
// TypeError 4103: (56-66='S calldata'): Internal type is not allowed for public or external functions.
